@@ -95,9 +95,9 @@ AC_GNU_SOURCE
 AM_GNU_GETTEXT(external)
 AM_GNU_GETTEXT_VERSION(0.14.1)
 
+LT_INIT
 AC_PROG_CC
 AC_PROG_YACC
-AC_PROG_LIBTOOL
 AC_PROG_CC_C99
 PKG_PROG_PKG_CONFIG
 
